# hmeg

./: LICENSE  README.md  hmeg.conf  hmeg.py  hmeg_cli.py  miniphrase.conf  pyproject.toml  requirements.txt
.github/workflow/: tests.yml
.github/workflows/: tests.yml
docs/: grammar_topics.md  vocabulary.md
hmeg/: __init__.py  entities.py  exercise_generator.py  factory.py  grammar_checker.py  grammar_registry.py  inflections.py  language_tool_manager.py  minilex.py  prompt_loader.py  registry.py  reranker.py  usecases.py  utils.py  verb_conjugator.py  vocabulary.py
hmeg/entities/: __init__.py  grammar.py  prompt.py  vocab.py
hmeg/grammar/: 1_from_a_to_b_from_c_until_d.toml  1_topic_subject_particle.toml  2_future_tense.toml  2_have_to_should_mus.toml  2_if_in_case.toml  2_present_progressive.toml  2_to_be_good_poor_at.toml  2_to_like.toml  9_while.toml  basic_present_tense.toml  have_dont_have_there_is_there_isnt.toml  past_tense.toml  please_give_me.toml  this_is.toml  what_do_you_want_to_do.toml  while.py  while.toml
hmeg/miniphrase/: ab.toml  cd.toml  efg.toml  h.toml  ikl.toml  mn.toml  opr.toml  stu.toml  wy.toml
hmeg/prompts/: schema.yaml
hmeg/topics/: 1_basic_present_tense.toml  1_from_a_to_b_from_c_until_d.toml  1_have_dont_have_there_is_there_isnt.toml  1_i_want_to.toml  1_negative_sentenses.toml  1_past_tense.toml  1_please_give_me.toml  1_this_is.toml  1_topic_subject_particle.toml  1_what_do_you_want_to_do.toml  2_and_and_then_therefore_so.toml  2_and_with.toml  2_but_however.toml  2_can_cannot.toml  2_dont_do_it.toml  2_future_tense.toml  2_have_to_should_must.toml  2_if_in_case.toml  2_imperative.toml  2_particles_for_method_way.toml  2_please_do_it_for_me.toml  2_present_progressive.toml  2_to_be_good_poor_at.toml  2_to_like.toml  3_after_ing.toml  3_approximately_about.toml  3_before_ing.toml  3_but_still_nevertheless.toml  3_in_front_of_behind.toml  (+72 more)
lm/: readme.md
tests/: test_exercise_generator.py  test_grammar_checker.py  test_prompt_loader.py  test_registry.py  test_reranker.py  test_usecases.py  test_utils.py  test_vocabulary.py
vocabs/: minilex.toml
(+7 files in other folders)
