[tool.poetry]
name = "hmeg"
version = "0.1.5"
description = "Generator of exercises for practicing speaking for language learning."
authors = ["Yury Choi <yurytsoy@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yurytsoy/hmeg"

[tool.poetry.dependencies]
python = "^3.9"
inflect = "^7.0.0"
mlconjug3 = "^3.11.0"
nltk = "^3.8.1"
fire = "^0.6.0"
toml = "^0.10.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
