[tool.poetry]
name = "hmeg"
version = "0.1.5"
description = "Generator of exercises for practicing speaking for language learning."
authors = ["Yury Choi <yurytsoy@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yurytsoy/hmeg"

[tool.poetry.dependencies]
python =  ">=3.9,<3.14"
inflect = "^7.0.0"
nltk = "^3.8.1"
numpy = "^2.0.0"
fire = "^0.6.0"
toml = "^0.10.2"
pandas = "^2.2.2"
language-tool-python = "^2.9.4"
python-levenshtein = "^0.27.1"
spacy = "^3.8.7"
torch = "^2.8.0"
torchvision = "^0.23.0"
transformers = "^4.56.1"
sentencepiece = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
